<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cococo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recording_title">녹음</string>
    <string name="time_title">00:00</string>
    <string name="play_title">재생</string>
    <string name="stop_title">정지</string>
    <string name="select_title">파일 선택</string>
    <string name="connection_title">병원 연결</string>
    <string name="control_title">기기 제어</string>
    <string name="setting_title">설정</string>
    <string name="home_title">처음 으로</string>
    <string name="Play_title">재생 기능</string>

</resources>