<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    tools:context="com.example.rec.Rec" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:columnCount="2" >

        <Button
            android:id="@+id/recording"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:padding="5dip"
            android:text="@string/recording_title"
            android:textSize="20sp" />

        <Button
            android:id="@+id/select"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:padding="5dip"
            android:text="@string/select_title"
            android:textSize="20sp" />
    </GridLayout>

    <Button
        android:id="@+id/connection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/connection_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/control"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/control_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/setting_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_title" />

</LinearLayout>