<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RecUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/recording_title"
        android:textSize="30sp" />

    <Button
        android:id="@+id/recorded"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recording_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/recordTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_title"
        android:textSize="30sp"
        android:padding="10dip" />

    <Button
        android:id="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_title"
        android:textSize="30sp" />

</LinearLayout>